# course1-lab1

./: CMakeLists.txt  Config.h.in  k17_konevych.cpp  test_.txt
